<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_gravity="center_vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
    >

        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/Monsite"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            android:src="@drawable/mlogo"
            android:textStyle="italic"
            android:layout_margin="10dp"
            android:layout_marginBottom="50dp"
            android:background="?android:selectableItemBackground"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorHint">

            <EditText
                android:id="@+id/edtx_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_email_black_24dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorHint"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edtx_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/round_button"
            android:padding="12dp"
            android:text="@string/btn_login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txv_forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:padding="2dp"
            android:text="Forgot Password?"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_person_add_black_24dp"
            android:gravity="center"
            android:text="No account yet? Create"
            android:textColor="@color/colorPrimary"
            android:textSize="15dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_googlesignin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:ignore="NestedWeights"
                android:text="Login with G+"
                android:padding="5dp"
                android:textColor="@color/white"
                android:background="#da3030"
                android:layout_weight="1"
               />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_facebookbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_weight="1"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>